# parson

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  diesel.toml  docker-compose.yml  package.json  turbo.json
.github/workflows/: container-image.yml  nightly-release.yml  publish-ghcr.yml  test.yml
apps/desktop/: README.md  package.json
apps/desktop/electron/: linux-installer.cjs  linux-installer.test.cjs  linux-relaunch.cjs  linux-relaunch.test.cjs  main.cjs  preload.cjs  startup-error.html  startup.html
apps/desktop/flatpak/: com.parsonlabs.Parson.yml
apps/desktop/scripts/: build-linux.sh  build.cjs  package-windows.ps1  prepare-sidecar.cjs  verify-linux-package.sh
apps/mobile/: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  app.json  package.json  tsconfig.json
apps/mobile/modules/parson-discovery/: LICENSE  expo-module.config.json  index.ts
apps/mobile/patches/: react-native-audio-api@0.13.2.patch
apps/mobile/plugins/: with-fast-player-transitions.js
apps/mobile/src/app/: _layout.tsx  index.tsx  player.tsx
apps/mobile/src/components/: action-drawer.tsx  album-actions.tsx  artist-actions.tsx  artwork.tsx  mini-player.tsx  music-ui.tsx  pause-glyph.tsx  playlist-actions.tsx  playlist-picker.tsx
apps/mobile/src/constants/: colors.ts
apps/mobile/src/hooks/: use-library-discovery.ts
apps/mobile/src/lib/: discovery-manifest.test.ts  discovery-manifest.ts  download-paths.test.ts  download-paths.ts  downloads.ts  format.ts  playable-song.ts  playback-state.test.ts  playback-state.ts  runtime.test.ts  runtime.ts  secure-storage.ts
apps/mobile/src/providers/: player-provider.tsx  session-provider.tsx
apps/site/: .gitignore  capture-screenshots.cjs  next.config.mjs  package.json  tsconfig.json  wrangler.jsonc
apps/site/app/: global.css  layout.tsx  page.tsx
apps/site/app/docs/: layout.tsx
apps/site/app/llms-full.txt/: route.ts
apps/site/app/llms.txt/: route.ts
apps/site/app/showcase/: page.tsx
apps/site/components/: app-chrome.tsx  interactive-product-demo.tsx  platform-download-button.tsx  sticky-download-button.tsx
apps/site/content/docs/: accounts-privacy-security.mdx  advanced-networking.mdx  connecting-devices.mdx  data-safety.mdx  development.mdx  diagnostics.mdx  download-and-install.mdx  index.mdx  library.mdx  listening.mdx  lyrics.mdx  meta.json  performance.mdx  playlists-likes-history.mdx  rescanning.mdx  start-here.mdx  supported-files.mdx  troubleshooting.mdx  updates-and-migrations.mdx
apps/site/lib/: get-llm-text.ts  layout.shared.tsx
apps/web/: .gitignore  README.md  next.config.mjs  package.json  tsconfig.json
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web/app/(app)/: app-shell.tsx  layout.tsx  page.tsx
apps/web/app/(unprotected)/: layout.tsx
apps/web/components/app/: providers.tsx  route-loading.tsx  splash-screen.tsx  title-metadata-state.test.ts  title-metadata-state.ts  title-metadata.tsx
apps/web/components/icons/: parson-brand-mark.tsx  pause.tsx  play.tsx
apps/web/components/layout/: app-sidebar.tsx  desktop-window-controls.tsx
apps/web/components/ui/: button.test.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input.tsx  select.tsx  slider.tsx  textarea.tsx
apps/web/features/account/: session-provider.tsx  session-state.test.ts  session-state.ts
apps/web/features/player/: audio-presets.test.ts  audio-presets.ts  (+26 more)
apps/web/public/: site.webmanifest  startup-error.html  startup.html
crates/backend/: Cargo.toml
crates/backend/migrations/2026-07-19-000000_v1_0_0_baseline/: down.sql  up.sql
crates/backend/src/: app.rs  assets.rs  discovery.rs  http.rs  lib.rs  main.rs  playlist_rules.rs  product.rs  recommendation.rs  server.rs  settings.rs  startup.rs
crates/backend/src/api/: album.rs  artist.rs  auth.rs  cast.rs  error.rs  filesystem.rs  genres.rs  home.rs  image.rs  library.rs  lyrics.rs  metadata.rs  mod.rs  playback.rs  playlist.rs  search.rs  setup.rs  song.rs  user.rs
crates/backend/src/domain/: mod.rs
crates/backend/src/persistence/: connection.rs  models.rs  schema.rs
crates/backend/tools/: build-pgo.ps1  build-pgo.sh
crates/parson-core/: Cargo.toml
crates/parson-core/src/: events.rs  ids.rs  lib.rs  library.rs  registry.rs
crates/windows-bridge/: Cargo.toml
crates/windows-bridge/include/: parson_music_windows.h
crates/windows-bridge/src/: lib.rs
crates/windows-server/: Cargo.toml  README.md  app.rc  build.rs  package.ps1  test-updater.ps1  verify-update-assets.ps1
crates/windows-server/src/: main.rs  updater.rs  windows_host.rs
distribution/: README.md  RELEASE.md  github-release-notes.md
distribution/appimage/: README.md
distribution/flathub/: README.md
distribution/microsoft-store/: README.md  listing-en-US.md
distribution/scripts/: validate.sh
distribution/truenas/: README.md  pr-description.md
distribution/unraid/: README.md  submission-notes.md
distribution/unraid/repository/: README.md  ca_profile.xml
distribution/winget/: README.md  generate.sh  pr-description.md
distribution/winget/templates/: ParsonLabs.Parson.installer.template.yaml  ParsonLabs.Parson.locale.en-US.template.yaml  ParsonLabs.Parson.template.yaml
(+63 files in other folders)
